@@ -1,0 +1,1 @@
+alter table src change key key;
