@@ -1,0 +1,4 @@
+PREHOOK: query: alter table src change key value string
+PREHOOK: type: ALTERTABLE_RENAMECOL
+Column 'value' exists
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
